# PPDDL_determinization

./: .gitignore  AODeterminization.cpp  AODeterminization.h  CMakeLists.txt  README.md  TLDeterminization.cpp  TLDeterminization.h
PPDDLDeterminizator/: CMakeLists.txt
PPDDLDeterminizator/include/: PDDLPrinter.h  PPDDLDeterminizator.h  PPDDLParserInterface.h  VALConversion.h
PPDDLDeterminizator/include/Strategies/: AODeterminizator.h  MLODeterminizator.h  TLDeterminizator.h
PPDDLDeterminizator/src/: PDDLPrinter.cpp  PPDDLDeterminizator.cpp  PPDDLDeterminizatorFactory.cpp  PPDDLParserInterface.cpp  VALConversion.cpp  ppddl_determinizer_main.cpp
PPDDLDeterminizator/src/PPDDLParser/: CMakeLists.txt  actions.cc  actions.h  domains.cc  domains.h  effects.cc  effects.h  expressions.cc  expressions.h  formulas.cc  formulas.h  functions.cc  functions.h  parser.yy  parser_main.cc  predicates.cc  predicates.h  problems.cc  problems.h  rational.cc  rational.h  refcount.h  requirements.cc  requirements.h  terms.cc  terms.h  tokenizer.ll  types.cc  types.h
PPDDLDeterminizator/src/Strategies/: AODeterminizator.cpp  MLODeterminizator.cpp  TLDeterminizator.cpp
include/: PPDDLDeterminizatorFactory.h
include/Strategies/: MLODeterminizator.h
src/: PPDDLDeterminizator.cpp  PPDDLParserInterface.cpp  VALConversion.cpp  ppddl_determinizer_main.cpp
src/PPDDLParser/: CMakeLists.txt  formulas.cc  parser_main.cc  requirements.cc  tokenizer.ll
src/Strategies/: AODeterminizator.cpp  TLDeterminizator.cpp
